--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,40 @@
 body{
-  color: blue;
   background-color: white;
   font-family: helvetica;
+  font-size: 1rem;
+}
+.main{
+  display: flex;
+  justify-content: center;
+}
+.container{
+  width: 960px;
+}
+.head{
+display: flex;
+align-items: center;
+background-color: cadetblue;
+
+}
+.head_logo{
+  padding-left: 2rem;
+  padding-right: 1rem;
+  display: flex;
+  align-content: center;
+}
+.head_logo img{
+  height: 1.5rem;
+}
+.head_text{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: white;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  padding-right: 2rem;
+  width: 100%;
+}
+.links span{
+padding-left: 2rem;
 }
