--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,22 @@
+html{
+  font-size: 18px;
+}
+
 body{
   background-color: white;
   font-family: helvetica;
   font-size: 1rem;
 }
 .main{
+}
+.background{
+  height: 31rem;
+  width: 100%;
+  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/tortoiseshell-optics/resources/images/glasses-bg.png);
+  background-size: cover;
   display: flex;
   justify-content: center;
+  background-position: 20%;
 }
 .container{
   width: 960px;
@@ -14,7 +25,10 @@ body{
 display: flex;
 align-items: center;
 background-color: cadetblue;
-
+margin-top: 1rem;
+}
+.menu{
+  display: none;
 }
 .head_logo{
   padding-left: 2rem;
@@ -37,4 +51,178 @@ background-color: cadetblue;
 }
 .links span{
 padding-left: 2rem;
+}
+.banner{
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin-right: -2rem;
+  margin-top: 10rem;
+}
+.banner h2{
+  padding: 1.5rem 5rem 1.5rem 5rem;
+  font-size: 2rem;
+  font-weight: bold;
+  background-color: white;
+  margin: 0;
+}
+.services{
+  display: flex;
+  justify-content:center;
+
+}
+.service{
+  display: flex;
+  flex-direction: column;
+  justify-content:space-between;;
+  align-items: center;
+  text-align: center;
+  margin: 3rem;
+  height: 8rem;
+  width: 5rem;
+}
+.service img{
+  width: 5rem;
+}
+.service img.paper{
+  width: 3.5rem;
+}
+
+div{
+  display: block;
+}
+.about{
+  display: flex;
+  flex-direction: row;
+justify-content: center;
+  margin-top: 3rem;
+  margin-bottom: 4rem;
+}
+.about_box{
+  width: 35%;
+  margin-left: 2.5%;
+  margin-right: 2.5%;
+}
+.about_box h4{
+  background-color: cadetblue;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 1.25rem;
+  width: 10rem;
+  font-size: 1rem;
+  font-weight: bold;
+  color: white;
+}
+footer{
+  display: flex;
+  justify-content: center;
+}
+footer .container{
+  background-color: azure;
+  display: flex;
+  align-items: center;
+}
+footer img{
+  padding-top: 4rem;
+  padding-right: 1rem;
+  padding-bottom: 4rem;
+  padding-left: 3rem;
+  height: 1.5rem;
+}
+@media only screen and (max-width: 1024px){
+  .container{
+    width: 100%;
+  }
+  .head{
+    margin-top: 0;
+  }
+  .banner{
+    margin-right: 2rem;
+    margin-top: 5rem;
+  }
+  .banner h2{
+  padding: .75rem 4rem .75rem 4rem;
+  font-size: 1.33rem;
+  }
+@media only screen and (max-width: 470px){
+  .background{
+    height: 17rem;
+    background-position: 20%;
+    margin-bottom: 3.77rem;
+  }
+  .banner{
+    width: 100%;
+    margin-top: 9rem;
+  }
+  .banner h2{
+    display: flex;
+    justify-content: center;
+    font-size: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    width: 100%;
+  }
+  .head_text{
+    display: none;
+  }
+  .head{
+    margin-top: 0;
+    display: flex;
+    justify-content: space-between;;
+  }
+  .menu{
+    padding-right: 2rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    color: white;
+  }
+  .services{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 3.77rem;
+    margin-bottom: 2.23rem;
+  }
+  .service{
+    margin: 0;
+    height:auto;
+    width: 5rem;
+
+  }
+
+  .service div{
+    font-size: 0.77rem;
+    margin-top: 1.54rem;
+    margin-bottom: 1.54rem;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .about{
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    justify-content: flex-start;
+    margin-top: 0;
+  }
+  .about_box{
+    width: 100%;
+  }
+  .about_box h4{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin: 0;
+  }
+  footer{
+    margin-top: 3.77;
+    display: flex;
+    justify-content: center;
+  }
+  footer .container{
+    justify-content: center;
+  }
+  footer span{
+    display: none;
+  }
 }
